Add JobAttachment js service

--- a/Termeh.Web/Index.html
+++ b/Termeh.Web/Index.html
@@ -34,6 +34,7 @@
     <script src="/Scripts/app/services/shared/confirmation.js"></script>
     <script src="/Scripts/app/services/jobs/job.js"></script>
     <script src="/Scripts/app/services/jobs/jobStatus.js"></script>
+    <script src="/Scripts/app/services/jobs/jobAttachment.js"></script>
     <script src="/Scripts/app/services/users/user.js"></script>
     <script src="/Scripts/app/controllers/home/home.js"></script>
     <script src="/Scripts/app/controllers/jobs/job.js"></script>
