Add jobAttachment directives

--- a/Termeh.Web/Index.html
+++ b/Termeh.Web/Index.html
@@ -40,6 +40,7 @@
     <script src="/Scripts/app/controllers/jobs/job.js"></script>
     <script src="/Scripts/app/controllers/jobs/jobs.js"></script>
     <script src="/Scripts/app/controllers/jobs/jobEdit.js"></script>
+    <script src="/Scripts/app/controllers/jobs/jobAttachments.js"></script>
 
 
     <script src="/Scripts/app/controllers/shared/resourceManager.js"></script>
@@ -48,5 +49,6 @@
     <script src="/Scripts/app/directives/shared/modal.js"></script>
     <script src="/Scripts/app/directives/shared/topmenu.js"></script>
     <script src="/Scripts/app/directives/shared/loadingoverlay.js"></script>
+    <script src="/Scripts/app/directives/shared/jobAttachment.js"></script>
 </body>
 </html>
