Add JobAttachment js service/controller

--- a/Termeh.Web/Index.html
+++ b/Termeh.Web/Index.html
@@ -41,6 +41,7 @@
     <script src="/Scripts/app/controllers/jobs/jobs.js"></script>
     <script src="/Scripts/app/controllers/jobs/jobEdit.js"></script>
     <script src="/Scripts/app/controllers/jobs/jobAttachments.js"></script>
+    <script src="/Scripts/app/controllers/jobs/jobAttachmentAdd.js"></script>
 
 
     <script src="/Scripts/app/controllers/shared/resourceManager.js"></script>
