--- a/Termeh.Web/Index.html
+++ b/Termeh.Web/Index.html
@@ -25,6 +25,7 @@
     <script src="/Scripts/libs/angular-resource-1.2.9.min.js"></script>
     <script src="/Scripts/libs/angular-route-1.2.9.min.js"></script>
     <script src="/Scripts/libs/angular-animate-1.2.9.min.js"></script>
+    <script src="/Scripts/libs/angular-ui/ui-bootstrap-tpls-0.11.0.min.js"></script>
     <script src="/Scripts/libs/angular-ui/select2.js"></script>
     <script src="/Scripts/libs/semantic/semantic.js"></script>
     <script src="/Scripts/config.js"></script>
