--- a/Termeh.Web/Index.html
+++ b/Termeh.Web/Index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="Content/themes/Site.css" />
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
     <link rel="stylesheet" href="Content/themes/select2/select2.css" />
+<!--    <link rel="stylesheet" href="Content/themes/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="Content/themes/bootstrap/bootstrap-theme.min.css" />-->
 </head>
 <body>
    <div ng-controller="ResourceMngrCtrl">
