Intro ngEnter after selecting a job on search box

--- a/Termeh.Web/Index.html
+++ b/Termeh.Web/Index.html
@@ -50,6 +50,7 @@
     <script src="/Scripts/app/controllers/shared/resourceManager.js"></script>
     <script src="/Scripts/app/services/shared/resourceManager.js"></script>
     <script src="/Scripts/app/directives/shared/datepicker.js"></script>
+    <script src="/Scripts/app/directives/shared/ngEnter.js"></script>
     <script src="/Scripts/app/directives/shared/modal.js"></script>
     <script src="/Scripts/app/directives/shared/topmenu.js"></script>
     <script src="/Scripts/app/directives/shared/loadingoverlay.js"></script>
