Refactor angularjs controller constructors( HomeCtrl, JobsCtrl)

--- a/Termeh.Web/Index.html
+++ b/Termeh.Web/Index.html
@@ -1,5 +1,5 @@
 ﻿<!doctype html>
-<html data-ng-app="resourceManagerApp">
+<html data-ng-app="termeh">
 <head>
     <META HTTP-EQUIV="Cache-Control" CONTENT="max-age=0">    
     <META HTTP-EQUIV="Cache-Control" CONTENT="no-cache, no-store, must-revalidate">    
