Refactor Angularjs controllers(Jobs, jobDetail, jobAttachments)

--- a/Termeh.Web/Index.html
+++ b/Termeh.Web/Index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="Content/themes/bootstrap/bootstrap-theme.min.css" />-->
 </head>
 <body>
-   <div ng-controller="ResourceMngrCtrl">
+   <div ng-controller="resourceManagerCtrl">
         <section id="main">
             <div data-ng-view></div>
         </section>
