Fix referencing problem

--- a/Termeh.Web/Index.html
+++ b/Termeh.Web/Index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="Content/themes/bootstrap/bootstrap-theme.min.css" />-->
 </head>
 <body>
-   <div ng-controller="resourceManagerCtrl">
+   <div ng-controller="homeCtrl">
         <section id="main">
             <div data-ng-view></div>
         </section>
@@ -31,7 +31,6 @@
     <script src="/Scripts/libs/angular-ui/select2.js"></script>
     <script src="/Scripts/libs/semantic/semantic.js"></script>
     <script src="/Scripts/config.js"></script>
-    <!--<script src="/Scripts/app/ngscripts.js"></script>-->
     <script src="/Scripts/app/app.js?version=1.0"></script>
     <script src="/Scripts/app/services/shared/helperService.js"></script>
     <script src="/Scripts/app/services/shared/confirmation.js"></script>
