--- a/Termeh.Web/Index.html
+++ b/Termeh.Web/Index.html
@@ -15,15 +15,16 @@
     <link rel="stylesheet" href="Content/themes/bootstrap/bootstrap-theme.min.css" />-->
 </head>
 <body>
-   <div ng-controller="homeCtrl">
-        <section id="main">
-            <div data-ng-view></div>
-        </section>
+    <div data-ng-controller="homeCtrl">
+        KKKK
+        <!--        <section id="main">
+                        <div data-ng-view></div>
+                    </section>-->
     </div>
     <script src="/Scripts/libs/jquery-1.9.1.js"></script>
     <script src="/Scripts/libs/jquery-ui-1.10.3.min.js"></script>
     <script src="/Scripts/libs/select2/select2.js"></script>
-    <script src="/Scripts/libs/angular-1.2.11.min.js"></script>
+    <script src="/Scripts/libs/angular.js"></script>
     <script src="/Scripts/libs/angular-resource-1.2.9.min.js"></script>
     <script src="/Scripts/libs/angular-route-1.2.9.min.js"></script>
     <script src="/Scripts/libs/angular-animate-1.2.9.min.js"></script>
