Update: put all js controllers/services in self-executing functions

--- a/Termeh.Web/Index.html
+++ b/Termeh.Web/Index.html
@@ -15,16 +15,15 @@
     <link rel="stylesheet" href="Content/themes/bootstrap/bootstrap-theme.min.css" />-->
 </head>
 <body>
-    <div data-ng-controller="homeCtrl">
-        KKKK
-        <!--        <section id="main">
-                        <div data-ng-view></div>
-                    </section>-->
+    <div data-ng-controller="ResourceManagerCtrl">
+        <section id="main">
+            <div data-ng-view></div>
+        </section>
     </div>
     <script src="/Scripts/libs/jquery-1.9.1.js"></script>
     <script src="/Scripts/libs/jquery-ui-1.10.3.min.js"></script>
     <script src="/Scripts/libs/select2/select2.js"></script>
-    <script src="/Scripts/libs/angular.js"></script>
+    <script src="/Scripts/libs/angular-1.2.11.min.js"></script>
     <script src="/Scripts/libs/angular-resource-1.2.9.min.js"></script>
     <script src="/Scripts/libs/angular-route-1.2.9.min.js"></script>
     <script src="/Scripts/libs/angular-animate-1.2.9.min.js"></script>
@@ -33,6 +32,7 @@
     <script src="/Scripts/libs/semantic/semantic.js"></script>
     <script src="/Scripts/config.js"></script>
     <script src="/Scripts/app/app.js?version=1.0"></script>
+    <script src="/Scripts/app/controllers/shared/resourceManager.js"></script>
     <script src="/Scripts/app/services/shared/helperService.js"></script>
     <script src="/Scripts/app/services/shared/confirmation.js"></script>
     <script src="/Scripts/app/services/job/jobDataService.js"></script>
@@ -46,8 +46,6 @@
     <script src="/Scripts/app/controllers/jobs/jobAttachments.js"></script>
     <script src="/Scripts/app/controllers/jobs/jobAttachmentAdd.js"></script>
 
-
-    <script src="/Scripts/app/controllers/shared/resourceManager.js"></script>
     <script src="/Scripts/app/directives/shared/datepicker.js"></script>
     <script src="/Scripts/app/directives/shared/ngEnter.js"></script>
     <script src="/Scripts/app/directives/shared/modal.js"></script>
