--- a/Termeh.Web/Index.html
+++ b/Termeh.Web/Index.html
@@ -21,10 +21,10 @@
     <script src="/Scripts/libs/jquery-1.9.1.js"></script>
     <script src="/Scripts/libs/jquery-ui-1.10.3.min.js"></script>
     <script src="/Scripts/libs/select2/select2.js"></script>
-    <script src="/Scripts/libs/angular-1.2.11.min.js"></script>
-    <script src="/Scripts/libs/angular-resource-1.2.9.min.js"></script>
-    <script src="/Scripts/libs/angular-route-1.2.9.min.js"></script>
-    <script src="/Scripts/libs/angular-animate-1.2.9.min.js"></script>
+    <script src="/Scripts/libs/angular.min.js"></script>
+    <script src="/Scripts/libs/angular-resource.min.js"></script>
+    <script src="/Scripts/libs/angular-route.min.js"></script>
+    <script src="/Scripts/libs/angular-animate.min.js"></script>
     <script src="/Scripts/libs/angular-ui/ui-bootstrap-tpls.js"></script>
     <script src="/Scripts/libs/angular-ui/select2.js"></script>
     <script src="/Scripts/libs/semantic/semantic.js"></script>
