--- a/Termeh.Web/Index.html
+++ b/Termeh.Web/Index.html
@@ -25,7 +25,7 @@
     <script src="/Scripts/libs/angular-resource.min.js"></script>
     <script src="/Scripts/libs/angular-route.min.js"></script>
     <script src="/Scripts/libs/angular-animate.min.js"></script>
-    <script src="/Scripts/libs/angular-ui/ui-bootstrap-tpls.js"></script>
+    <script src="/Scripts/libs/angular-ui/ui-bootstrap-tpls-0.12.0.min.js"></script>
     <script src="/Scripts/libs/angular-ui/select2.js"></script>
     <script src="/Scripts/libs/semantic/semantic.js"></script>
     <script src="/Scripts/config.js"></script>
