Applying the latest version of semantic-ui.js

--- a/Termeh.Web/Index.html
+++ b/Termeh.Web/Index.html
@@ -27,7 +27,7 @@
     <script src="/Scripts/libs/angular-animate.min.js"></script>
     <script src="/Scripts/libs/angular-ui/ui-bootstrap-tpls-0.12.0.min.js"></script>
     <script src="/Scripts/libs/angular-ui/select2.js"></script>
-    <script src="/Scripts/libs/semantic/semantic.js"></script>
+    <script src="/Scripts/libs/semantic/semantic.min.js"></script>
     <script src="/Scripts/config.js"></script>
     <script src="/Scripts/app/app.js?version=1.0"></script>
     <script src="/Scripts/app/controllers/shared/resourceManager.js"></script>
