--- a/Termeh.Web/Index.html
+++ b/Termeh.Web/Index.html
@@ -47,5 +47,6 @@
     <script src="/Scripts/app/directives/shared/topmenu.js"></script>
     <script src="/Scripts/app/directives/shared/confirmationmodal.js"></script>
     <script src="/Scripts/app/directives/shared/jobAttachment.js"></script>
+    <script src="/Scripts/app/directives/shared/loadingoverlay.js"></script>
 </body>
 </html>
