--- a/Termeh.Web/Index.html
+++ b/Termeh.Web/Index.html
@@ -21,9 +21,8 @@
     <script src="/Scripts/libs/jquery-1.9.1.js"></script>
     <script src="/Scripts/libs/jquery-ui-1.10.3.min.js"></script>
     <script src="/.bin/bower_components/angularjs/angular.js"></script>
-    <script src="/Scripts/libs/angular-resource.min.js"></script>
-    <script src="/Scripts/libs/angular-route.min.js"></script>
-    <script src="/Scripts/libs/angular-animate.min.js"></script>
+    <script src="/.bin/bower_components/angular-resource/angular-route.min.js"></script>
+    <script src="/.bin/bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="/Scripts/libs/angular-ui/ui-bootstrap-tpls-0.12.0.min.js"></script>
     <script src="/Scripts/libs/select2/select2.js"></script>
     <script src="/Scripts/libs/semantic/semantic.min.js"></script>
