--- a/Termeh.Web/Index.html
+++ b/Termeh.Web/Index.html
@@ -24,7 +24,7 @@
     <script src="/.bin/bower_components/angular-resource/angular-route.min.js"></script>
     <script src="/.bin/bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="/Scripts/libs/angular-ui/ui-bootstrap-tpls-0.12.0.min.js"></script>
-    <script src="/Scripts/libs/select2/select2.js"></script>
+    <script src="/.bin/bower_components/angular-ui-bootstrap/src/dropdown/dropdown.js"></script>
     <script src="/Scripts/libs/semantic/semantic.min.js"></script>
     <script src="/Scripts/config.js"></script>
     <script src="/Scripts/app/app.js?version=1.0"></script>
