added a test to html prj

--- a/Termeh.Web/Index.html
+++ b/Termeh.Web/Index.html
@@ -15,7 +15,7 @@
 <body>
     <div data-ng-controller="ResourceManagerCtrl">
         <section id="main">
-            <div data-ng-view></div>
+            <div data-ng-view>test</div>
         </section>
     </div>
     <script src="/Scripts/libs/jquery-1.9.1.js"></script>
